--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
+    "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "express-brute": "^1.0.1",
     "express-session": "^1.17.3",
@@ -26,6 +29,7 @@
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.1",
     "npm": "^9.6.4",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
