--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.1",
     "npm": "^9.6.4",
     "passport": "^0.6.0",
