--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/storage": "^6.9.5",
+    "alert": "^5.1.4",
     "bcrypt": "^5.1.0",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.20.2",
@@ -41,6 +42,7 @@
     "passport-local": "^1.0.0",
     "rate-limiter-flexible": "^2.4.1",
     "socket.io": "^4.6.1",
+    "sweet": "^0.1.1",
     "sweetalert2": "^11.7.3",
     "underscore": "^1.13.6"
   },
